<resources>
    <string name="app_name">Individual Project CSC490</string>

    //Generic Strings
    <string name="computeButton">Compute</string>
    <string name="initValue">0</string>

    <string name="foodCategory">Food</string>
    <string name="housingCategory">Housing</string>
    <string name="transportationCategory">Transportation</string>
    <string name="utilitiesCategory">Utilities</string>
    <string name="insuranceCategory">Insurance</string>
    <string name="healthMedicalCategory">Health/Medical</string>
    <string name="otherCategory">Other</string>

    <string name="foodHint">Groceries, Dining</string>
    <string name="housingHint">Rent, Mortgage</string>
    <string name="transportationHint">Car, Gas, Travel</string>
    <string name="utilitiesHint">Water, Gas, Electric</string>
    <string name="insuranceHint">Housing, Car, Health</string>
    <string name="healthMedicalHint">Medicine, Injuries, Sickness</string>
    <string name="otherHint">Misc.</string>

    <string-array name="paymentPeriodOptions">
        <item>Monthly</item>
        <item>Annually</item>
        <item>Weekly</item>
    </string-array>

    //Home page
    <string name="homePage_title">FI/RE</string>
    <string name="calc_button">Calculators</string>
    <string name="budget_button">Budgeting</string>
    <string name="ref_button">References</string>
    <string name="info_button">Info</string>

    //Calculator page
    <string name="calcPage_title">FI/RE Calculators</string>
    <string name="retireEarlyButton">Retire Early Calculator</string>
    <string name="saveRate_button">Savings Rate Calculator</string>
    <string name="expenseRate_button">Yearly Expenses Calculator</string>

    //Budgeting page
    <string name="budgetPage_title">Budget Creator</string>
    <string name="budgetingPageHelp">Enter in percentages for each field</string>
    <string name="createBudgetButton">Create Budget</string>
    <string name="percentageSumText">% Used:</string>

    <string name="foodValue">10</string>
    <string name="housingValue">25</string>
    <string name="transportationValue">10</string>
    <string name="utilitiesValue">5</string>
    <string name="insuranceValue">10</string>
    <string name="healthMedicalValue">5</string>
    <string name="otherValue">10</string>

    //Created Budget Page
    <string name="createdBudgetPage_title">Created Budget</string>
    <string name="leftoverCategory">Leftover</string>

    //Reference page
    <string name="refPage_title">References</string>
    <string name="booksButton">Books</string>
    <string name="blogsButton">Blogs</string>
    <string name="VideosButton">Videos</string>
    <string name="ToolsButton">Tools</string>

    <string-array name="books">
        <item>Total Money Makeover by Dave Ramsey</item>
        <item>Everyday Millionaires by Chris Hogan</item>
        <item>I Will Teach You to be Rich by Ramit Sethi</item>
        <item>Think and Grow Rich by Napoleon Hill</item>
        <item>Your Money or Your Life by Vicki Robin and Joe Dominguez</item>
        <item>Rich Dad, Poor Dad by Robert Kiyosaki</item>
        <item>The Little Book of Common Sense Investing by John Bogle</item>
        <item>F.U. Money by Dan Lok</item>
        <item>The Richest Man in Babylon by George Clason</item>
    </string-array>

    <string-array name="blogs">
        <item>https://www.reddit.com/r/financialindependence/</item>
        <item>https://www.mrmoneymustache.com/</item>
        <item>https://www.reddit.com/r/leanfire/</item>
        <item>https://www.reddit.com/r/personalfinance/</item>
    </string-array>

    <string-array name="videos">
        <item>Graham Stephan</item>
        <item>The Dave Ramsey Show</item>
    </string-array>

    <string-array name="tools">
        <item>https://networthify.com/calculator/earlyretirement</item>
        <item>https://www.mint.com/</item>
        <item>https://www.calculator.net/budget-calculator.html</item>
    </string-array>

    //FI/RE Number page
    <string name="FIRENumberPage_title">FI/RE Number</string>
    <string name="yearsToRetireValue">Years to Retire</string>
    <string name="netWorthValue">Net Worth at Retirement</string>

    <string name="savingsRateCategory">Savings Rate</string>
    <string name="portfolioCategory">Portfolio</string>
    <string name="annualReturnCategory">Annual Return</string>
    <string name="withdrawalRateCategory">Withdrawal Rate</string>

    <string name="savingsRateHint">From Savings Rate Calculator</string>
    <string name="portfolioHint">Amount Invested</string>
    <string name="annualReturnHint">Investments Return</string>
    <string name="withdrawalRateHint">Investments Withdrawn</string>

    <string name="returnValue">5</string>
    <string name="withdrawalValue">4</string>

    //Savings Rate page
    <string name="savingsRatePage_title">Savings Rate</string>
    <string name="savingsRateValue">Your Savings Rate</string>

    <string name="incomeCategory">Income</string>
    <string name="taxesCategory">Taxes</string>
    <string name="expensesCategory">Expenses</string>

    <string name="incomeHint">Pre-tax Salary or Yearly Pay</string>
    <string name="taxesHint">Taxes on your income</string>
    <string name="expensesHint">Use Expenses Calculator</string>

    //Yearly Expenses page
    <string name="yearlyExpensesPage_title">Yearly Expenses</string>
    <string name="yearlyExpensesValue">Your Yearly Expenses</string>

    //Info Page
    <string name="infoPage_title">Info</string>
    <string name="aboutTitle">About:</string>
    <string name="aboutContent">Kevin Phoenix is a Computer Science Major and Mathematics Minor at Augustana College in Rock Island, IL. This app was created during his CSC-490 Senior Inquiry Computer Science Individual Project.</string>
    <string name="disclaimerTitle">Disclaimer:</string>
    <string name="disclaimerContent">This app is for entertainment purposes only and is not meant to be financial or investing advice. I am not a licensed financial advisor and this app should not be used for making financial or investing decisions.</string>


</resources>
