<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoPage">

    <TextView
        android:id="@+id/disclaimerContent"
        android:layout_width="292dp"
        android:layout_height="246dp"
        android:text="@string/disclaimerContent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/disclaimerTitle"
        app:layout_constraintTop_toBottomOf="@+id/disclaimerTitle"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/disclaimerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimerTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/aboutContent"
        app:layout_constraintTop_toBottomOf="@+id/aboutContent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/infoPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoPage_title"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/aboutContent"
        android:layout_width="294dp"
        android:layout_height="208dp"
        android:text="@string/aboutContent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/aboutTitle"
        app:layout_constraintTop_toBottomOf="@+id/aboutTitle"
        app:layout_constraintVertical_bias="0.033" />
</androidx.constraintlayout.widget.ConstraintLayout>