<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/infoButton"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:text="@string/info_button"
        app:fontFamily="@font/alike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/referencesButton"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/homePageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homePage_title"
        android:textSize="36sp"
        app:fontFamily="@font/alike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/calculatorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button"
        app:fontFamily="@font/alike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <Button
        android:id="@+id/budgetingButton"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:text="@string/budget_button"
        app:fontFamily="@font/alike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorsButton"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/referencesButton"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:text="@string/ref_button"
        app:fontFamily="@font/alike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetingButton"
        app:layout_constraintVertical_bias="0.208" />

</androidx.constraintlayout.widget.ConstraintLayout>